[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "equiformer-v3"
version = "0.1.0"
description = "EquiformerV3 experimental models"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torch_geometric",
    "e3nn>=0.5",
    "numpy",
    "ase",
]

[tool.setuptools]
package-dir = {"" = "models"}

[tool.setuptools.packages.find]
where = ["models"]
